{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 22,
  "lineage": "9cb12f00-e083-0180-f69a-2ccf8998bf85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07817f5d0e3866d32",
            "arn": "arn:aws:ec2:us-east-1:261359228600:instance/i-0f1c02a66614d54e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1c02a66614d54e1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e56f4b86e9659567",
            "private_dns": "ip-10-0-10-170.ec2.internal",
            "private_ip": "10.0.10.170",
            "public_dns": "ec2-3-91-252-36.compute-1.amazonaws.com",
            "public_ip": "3.91.252.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065ef7e26040a0261",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b9aa65a1ae05d00",
            "tags": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b449795cfece187"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_instance1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07817f5d0e3866d32",
            "arn": "arn:aws:ec2:us-east-1:261359228600:instance/i-0ff9508c64df69675",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff9508c64df69675",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0384ab56dae125298",
            "private_dns": "ip-10-0-11-195.ec2.internal",
            "private_ip": "10.0.11.195",
            "public_dns": "ec2-54-226-97-176.compute-1.amazonaws.com",
            "public_ip": "54.226.97.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0516503f73be78b63",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b837ea470ff535f2",
            "tags": {
              "Name": "instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b98e71b6169ed7b0"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_instance2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:internet-gateway/igw-0194619f046f84bbe",
            "id": "igw-0194619f046f84bbe",
            "owner_id": "261359228600",
            "tags": {
              "Name": "challenge-igw"
            },
            "vpc_id": "vpc-0d4e060c7116525ae"
          },
          "dependencies": [
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:network-acl/acl-08a9b3be0d0f62d13",
            "egress": [],
            "id": "acl-08a9b3be0d0f62d13",
            "ingress": [],
            "owner_id": "261359228600",
            "subnet_ids": [
              "subnet-05b9aa65a1ae05d00",
              "subnet-0b837ea470ff535f2"
            ],
            "tags": {
              "Name": "challenge-acl"
            },
            "vpc_id": "vpc-0d4e060c7116525ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_100",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-254127221",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08a9b3be0d0f62d13",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_101",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3467342773",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08a9b3be0d0f62d13",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_102",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1464407476",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08a9b3be0d0f62d13",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_100",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1826802655",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08a9b3be0d0f62d13",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_101",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4148660144",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08a9b3be0d0f62d13",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_102",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2161726784",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08a9b3be0d0f62d13",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_103",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-461117743",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08a9b3be0d0f62d13",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 103,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_104",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 8888,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1877274784",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08a9b3be0d0f62d13",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 104,
            "to_port": 8888
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:route-table/rtb-0821230f7de708fe7",
            "id": "rtb-0821230f7de708fe7",
            "owner_id": "261359228600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0194619f046f84bbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "challenge-public-rt"
            },
            "vpc_id": "vpc-0d4e060c7116525ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023dc1360ba2e2ea5",
            "route_table_id": "rtb-0821230f7de708fe7",
            "subnet_id": "subnet-05b9aa65a1ae05d00"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037907338eaa0f6fe",
            "route_table_id": "rtb-0821230f7de708fe7",
            "subnet_id": "subnet-0b837ea470ff535f2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:security-group/sg-07b449795cfece187",
            "description": "Allow instance1 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b449795cfece187",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow instance1",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow instance1",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_instance1",
            "name_prefix": "",
            "owner_id": "261359228600",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d4e060c7116525ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:security-group/sg-0b98e71b6169ed7b0",
            "description": "Allow instance2 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b98e71b6169ed7b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow instance2",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow instance2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_instance2",
            "name_prefix": "",
            "owner_id": "261359228600",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d4e060c7116525ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:security-group/sg-0b02ca24962928f44",
            "description": "Allow lb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b02ca24962928f44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow lb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_lb",
            "name_prefix": "",
            "owner_id": "261359228600",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d4e060c7116525ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:subnet/subnet-05b9aa65a1ae05d00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-05b9aa65a1ae05d00",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261359228600",
            "tags": {
              "Name": "challenge-public_subnet_1"
            },
            "tags_all": {
              "Name": "challenge-public_subnet_1"
            },
            "vpc_id": "vpc-0d4e060c7116525ae"
          },
          "dependencies": [
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:subnet/subnet-0b837ea470ff535f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0b837ea470ff535f2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261359228600",
            "tags": {
              "Name": "challenge-public_subnet_2"
            },
            "tags_all": {
              "Name": "challenge-public_subnet_2"
            },
            "vpc_id": "vpc-0d4e060c7116525ae"
          },
          "dependencies": [
            "aws_vpc.challenge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261359228600:vpc/vpc-0d4e060c7116525ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09abe8fd5660e3102",
            "default_route_table_id": "rtb-061948db5bdce9909",
            "default_security_group_id": "sg-0be786ec88b8c830f",
            "dhcp_options_id": "dopt-945172ee",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d4e060c7116525ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-061948db5bdce9909",
            "owner_id": "261359228600",
            "tags": {
              "Name": "challenge-vpc"
            },
            "tags_all": {
              "Name": "challenge-vpc"
            }
          }
        }
      ]
    }
  ]
}